<resources>
    <string name="app_name">航迹空间Circle</string>
    <string name="phone_hint">账户：</string>
    <string name="password_hint">密码：</string>
    <string name="action_login">登录</string>
    <string name="action_register">注册</string>
    <string name="exit">exit</string>
    <string name="confirm_register">确定注册</string>
    <string name="cancel_register">取消注册</string>
    <string name="register_account_hint">请输入注册账号：</string>
    <string name="register_password_hint">请输入密码（至少由数字、字母、特殊符号中的两种构成）</string>
    <string name="register_repassword_hint">请再次输入密码</string>
    <string name="register_nick_hint">请输入用户昵称</string>
    <string name="register_test_hint">请输入验证码</string>
    <string name="get_test_bt">获取验证码</string>
    <string name="register_name_hint">请输入昵称：</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="community">社区</string>
    <string name="market">交易</string>
    <string name="title_activity_photo">photo</string>
</resources>